--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 baseurl: ""
-class_name: "Desenvolvimento de Aplicativos Web"
-class_year: "2016"
+class_name: "Desenvolvimento de Aplicações Web"
+class_year: "2017"
 
 exclude:
   - vendor
