Correção do scss. Adicionado link para fonte.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 baseurl: ""
 class_name: "Desenvolvimento de Aplicações Web"
 class_year: "2017"
+repository_name: "students-2017"
 
 exclude:
   - vendor
