Added assignment tests

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,10 @@
 FROM node:17-slim
 
+# Git setup
 ENV GIT_DISCOVERY_ACROSS_FILESYSTEM=1
 RUN apt-get update
-RUN apt-get install -y git && \
-    apt-get install -y ruby-full build-essential zlib1g-dev
-RUN gem install bundler
+RUN apt-get install -y git
+    
+# Jekyll setup
+RUN apt-get install -y ruby-full build-essential zlib1g-dev && \
+    gem install bundler
