Added github actions files

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -8,3 +8,8 @@ RUN apt-get install -y git
 # Jekyll setup
 RUN apt-get install -y ruby-full build-essential zlib1g-dev && \
     gem install bundler
+
+# Java setup for Selenium
+# RUN apt-get install -y default-jdk
+# RUN npm install -g Jest && \
+#     npm install -g chromedriver
