--- a/.github/actions/public-grading/Dockerfile
+++ b/.github/actions/public-grading/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:17-slim
 
 # Jekyll setup
-RUN apt-get install -y ruby-full build-essential zlib1g-dev && \
+RUN apt-get update && \
+    apt-get install -y ruby-full build-essential zlib1g-dev && \
     gem install bundler
 
 COPY ../../../ ./
