Testing Gemfile location

--- a/.github/actions/public-grading/Dockerfile
+++ b/.github/actions/public-grading/Dockerfile
@@ -5,6 +5,6 @@ RUN apt-get update && \
     apt-get install -y ruby-full build-essential zlib1g-dev && \
     gem install bundler
 
-COPY ./ ./
+COPY ./Gemfile ./Gemfile
 RUN bundle install
 RUN bundle exec jekyll build
