--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -9,7 +9,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
+      - name: Checkout do repositório
+        uses: actions/checkout@v2
   
       - name: 2a etapa
         uses: ./.github/actions/public-grading
