Trying to fix jekyll path

--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -29,3 +29,5 @@ jobs:
 
       - name: Execução dos testes
         run: npm test
+        env:
+          JEKYLL_PATH: "${{ github.workspace }}/_site"
