--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -1,7 +1,8 @@
 name: Correção
 
 on:
-  push:
+  pull_request:
+    types: [ synchronize, opened, reopened]
     branches: [ "gh-pages" ]
 
 env:
@@ -48,6 +49,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      continue-on-error: true
       - name: Carregando cache do projeto
         uses: actions/cache@v2
         with:
