Updated for debugging purposes

--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -2,7 +2,7 @@ name: Correção
 
 on:
   pull_request:
-    types: [ synchronize, opened, reopened]
+    types: [ synchronize, opened, reopened, labeled ]
     branches: [ "gh-pages" ]
 
 env:
@@ -49,7 +49,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      continue-on-error: true
       - name: Carregando cache do projeto
         uses: actions/cache@v2
         with:
