Added permission fix

--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -22,6 +22,7 @@ jobs:
           docker run \
           -v ${{ github.workspace }}:/srv/jekyll -v ${{ env.JEKYLL_PATH }}/:/srv/jekyll/_site \
           jekyll/builder:latest /bin/bash -c "chmod -R 777 /srv/jekyll && jekyll build --future"
+        run: sudo chown -R $(whoami):$(id -ng) ${{ env.JEKYLL_PATH }}
 
       - name: Preparação dos testes
         uses: actions/setup-node@v2
