--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -2,7 +2,7 @@ name: Correção
 
 on:
   pull_request:
-    types: [ synchronize, opened, reopened, labeled ]
+    types: [ synchronize, opened, reopened ]
     branches: [ "gh-pages" ]
 
 env:
