--- a/.github/workflows/autograder.yml
+++ b/.github/workflows/autograder.yml
@@ -1,15 +1,15 @@
 name: Correção
 
-on:
-  pull_request:
-    types: [ synchronize, opened, reopened ]
-    branches: [ "gh-pages" ]
-  workflow_dispatch:
-    inputs:
-      test:
-        description: "Teste a ser executado"
-        required: true
-        default: "T1"
+on: [push, workflow_dispatch, pull_request]
+  # pull_request:
+  #   types: [ synchronize, opened, reopened ]
+  #   branches: [ "gh-pages" ]
+  # workflow_dispatch:
+  #   inputs:
+  #     test:
+  #       description: "Teste a ser executado"
+  #       required: true
+  #       default: "T1"
 
 env:
   JEKYLL_PATH: "${{ github.workspace }}/_site"
