--- a/.github/workflows/autograder.yml
+++ b/.github/workflows/autograder.yml
@@ -1,80 +1,91 @@
-name: Correção
+# name: Correção
 
-on: [push, workflow_dispatch, pull_request]
-  # pull_request:
-  #   types: [ synchronize, opened, reopened ]
-  #   branches: [ "gh-pages" ]
-  # workflow_dispatch:
-  #   inputs:
-  #     test:
-  #       description: "Teste a ser executado"
-  #       required: true
-  #       default: "T1"
+# on: [push, workflow_dispatch, pull_request]
+#   # pull_request:
+#   #   types: [ synchronize, opened, reopened ]
+#   #   branches: [ "gh-pages" ]
+#   # workflow_dispatch:
+#   #   inputs:
+#   #     test:
+#   #       description: "Teste a ser executado"
+#   #       required: true
+#   #       default: "T1"
 
-env:
-  JEKYLL_PATH: "${{ github.workspace }}/_site"
+# env:
+#   JEKYLL_PATH: "${{ github.workspace }}/_site"
 
-jobs:
-  setup:
-    name: Setup do projeto
-    runs-on: self-hosted
+# jobs:
+#   setup:
+#     name: Setup do projeto
+#     runs-on: self-hosted
     
-    steps:
-      - name: Say Welcome, friend!
-        run: echo "Welcome to the AutoGrader!"
+#     steps:
+#       - name: Say Welcome, friend!
+#         run: echo "Welcome to the AutoGrader!"
 
-      - name: Checkout do repositório
-        uses: actions/checkout@v2
+#       - name: Checkout do repositório
+#         uses: actions/checkout@v2
   
-      - name: Build Jekyll
-        run: |
-          docker run \
-          -v ${{ github.workspace }}:/srv/jekyll -v ${{ env.JEKYLL_PATH }}/:/srv/jekyll/_site \
-          jekyll/builder:latest /bin/bash -c "chmod -R 777 /srv/jekyll && jekyll build --future"
+#       - name: Build Jekyll
+#         run: |
+#           docker run \
+#           -v ${{ github.workspace }}:/srv/jekyll -v ${{ env.JEKYLL_PATH }}/:/srv/jekyll/_site \
+#           jekyll/builder:latest /bin/bash -c "chmod -R 777 /srv/jekyll && jekyll build --future"
 
-      - name: Ajustes de permissão
-        run: sudo chown -R $(whoami):$(id -ng) ${{ env.JEKYLL_PATH }}
+#       - name: Ajustes de permissão
+#         run: sudo chown -R $(whoami):$(id -ng) ${{ env.JEKYLL_PATH }}
 
-      - name: Preparação dos testes
-        uses: actions/setup-node@v2
-        with: 
-          node-version: 16.x
-          cache: 'npm'
+#       - name: Preparação dos testes
+#         uses: actions/setup-node@v2
+#         with: 
+#           node-version: 16.x
+#           cache: 'npm'
 
-      - name: Configuração das dependências
-        run: npm install
+#       - name: Configuração das dependências
+#         run: npm install
 
-      - name: Caching do projeto
-        uses: actions/cache@v2
-        with:
-          path: |
-            ${{ env.JEKYLL_PATH }}/
-            ${{ github.workspace }}/tests/
-            ${{ github.workspace }}/node_modules/
-            ${{ github.workspace }}/package-lock.json
-            ${{ github.workspace }}/package.json
-          key: ${{ runner.os }}-${{ github.run_id }}
+#       - name: Caching do projeto
+#         uses: actions/cache@v2
+#         with:
+#           path: |
+#             ${{ env.JEKYLL_PATH }}/
+#             ${{ github.workspace }}/tests/
+#             ${{ github.workspace }}/node_modules/
+#             ${{ github.workspace }}/package-lock.json
+#             ${{ github.workspace }}/package.json
+#           key: ${{ runner.os }}-${{ github.run_id }}
 
-  grading-json-file:
-    name: "Exercício: Mural dos Estudantes"
-    needs: setup
-    runs-on: ubuntu-latest
-    strategy:
-      matrix: 
-        test: [ "T1", "T2", "T3" ]
+#   grading-json-file:
+#     name: "Exercício: Mural dos Estudantes"
+#     needs: setup
+#     runs-on: ubuntu-latest
+#     strategy:
+#       matrix: 
+#         test: [ "T1", "T2", "T3" ]
 
+#     steps:
+#       - name: Carregando cache do projeto
+#         uses: actions/cache@v2
+#         with:
+#           path: |
+#             ${{ env.JEKYLL_PATH }}/
+#             ${{ github.workspace }}/tests/
+#             ${{ github.workspace }}/node_modules/
+#             ${{ github.workspace }}/package-lock.json
+#             ${{ github.workspace }}/package.json
+#           key: ${{ runner.os }}-${{ github.run_id }}
+
+#       - name: "${{ matrix.test }}"
+#         if: ${{ always() }}
+#         run: npm test -- -t "${{ matrix.test }}"
+
+
+name: Hello-World
+on: [push, workflow_dispatch]
+jobs:
+  build:
+    # The type of runner that the job will run on
+    runs-on: self-hosted
     steps:
-      - name: Carregando cache do projeto
-        uses: actions/cache@v2
-        with:
-          path: |
-            ${{ env.JEKYLL_PATH }}/
-            ${{ github.workspace }}/tests/
-            ${{ github.workspace }}/node_modules/
-            ${{ github.workspace }}/package-lock.json
-            ${{ github.workspace }}/package.json
-          key: ${{ runner.os }}-${{ github.run_id }}
-
-      - name: "${{ matrix.test }}"
-        if: ${{ always() }}
-        run: npm test -- -t "${{ matrix.test }}"
+      - name: Say Hello World
+        run: echo Hello, world!
