--- a/.github/workflows/autograder.yml
+++ b/.github/workflows/autograder.yml
@@ -37,8 +37,8 @@ jobs:
       #     -v ${{ github.workspace }}:/srv/jekyll -v ${{ env.JEKYLL_PATH }}/:/srv/jekyll/_site \
       #     jekyll/builder:latest /bin/bash -c "chmod -R 777 /srv/jekyll && jekyll build --future"
 
-      - name: Ajustes de permissão
-        run: sudo chown -R $(whoami):$(id -ng) ${{ env.JEKYLL_PATH }}
+      # - name: Ajustes de permissão
+      #   run: sudo chown -R $(whoami):$(id -ng) ${{ env.JEKYLL_PATH }}
 
       - name: Preparação dos testes
         uses: actions/setup-node@v2
