Fix on autograding

--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -40,6 +40,9 @@ jobs:
 
       - name: "Exercício Mural dos Estudantes"
         uses: education/autograding@v1
+        with:
+          env: |
+            JEKYLL_PATH=${{ env.JEKYLL_PATH }}
         
 
       # - name: Caching do projeto
