Testing markdown output

--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -44,6 +44,14 @@ jobs:
           JEKYLL_PATH: "${{ github.workspace }}/_site"
         
 
+      - name: Generate list using Markdown
+        run: |
+          echo "This is the lead in sentence for the list" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY # this is a blank line
+          echo "- Lets add a bullet point" >> $GITHUB_STEP_SUMMARY
+          echo "- Lets add a second bullet point" >> $GITHUB_STEP_SUMMARY
+          echo "- How about a third one?" >> $GITHUB_STEP_SUMMARY
+
       # - name: Caching do projeto
       #   uses: actions/cache@v2
       #   with:
