--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -38,6 +38,16 @@ jobs:
       # - name: Configuração das dependências
       #   run: npm install
 
+      - name: Generate list using Markdown
+        run: |
+          echo "BEFORE" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY # this is a blank line
+          echo "This is the lead in sentence for the list" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY # this is a blank line
+          echo "- Lets add a bullet point" >> $GITHUB_STEP_SUMMARY
+          echo "- Lets add a second bullet point" >> $GITHUB_STEP_SUMMARY
+          echo "- How about a third one?" >> $GITHUB_STEP_SUMMARY
+
       - name: "Exercício Mural dos Estudantes"
         uses: education/autograding@v1
         env:
@@ -46,6 +56,8 @@ jobs:
 
       - name: Generate list using Markdown
         run: |
+          echo "AFTER" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY # this is a blank line
           echo "This is the lead in sentence for the list" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY # this is a blank line
           echo "- Lets add a bullet point" >> $GITHUB_STEP_SUMMARY
