--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -38,31 +38,19 @@ jobs:
       # - name: Configuração das dependências
       #   run: npm install
 
-      - name: Generate list using Markdown
-        run: |
-          echo "BEFORE" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY # this is a blank line
-          echo "This is the lead in sentence for the list" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY # this is a blank line
-          echo "- Lets add a bullet point" >> $GITHUB_STEP_SUMMARY
-          echo "- Lets add a second bullet point" >> $GITHUB_STEP_SUMMARY
-          echo "- How about a third one?" >> $GITHUB_STEP_SUMMARY
 
       - name: "Exercício Mural dos Estudantes"
         uses: education/autograding@v1
         env:
           JEKYLL_PATH: "${{ github.workspace }}/_site"
-        
-
-      - name: Generate list using Markdown
-        run: |
-          echo "AFTER" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY # this is a blank line
-          echo "This is the lead in sentence for the list" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY # this is a blank line
-          echo "- Lets add a bullet point" >> $GITHUB_STEP_SUMMARY
-          echo "- Lets add a second bullet point" >> $GITHUB_STEP_SUMMARY
-          echo "- How about a third one?" >> $GITHUB_STEP_SUMMARY
+      
+      - name: "Test reporter"
+        uses: dorny/test-reporter@v1
+        with:
+          artifact: test-results            # artifact name
+          name: JEST Tests                  # Name of the check run which will be created
+          path: '*.xml'                     # Path to test results (inside artifact .zip)
+          reporter: jest-junit              # Format of test results
 
       # - name: Caching do projeto
       #   uses: actions/cache@v2
