--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -46,6 +46,7 @@ jobs:
       
       - name: "Test reporter"
         uses: dorny/test-reporter@v1
+        if: ${{ always() }}
         with:
           artifact: test-results            # artifact name
           name: JEST Tests                  # Name of the check run which will be created
