--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -40,21 +40,12 @@ jobs:
 
 
       - name: "Exercício Mural dos Estudantes"
-        uses: education/autograding@v1
-        env:
-          JEKYLL_PATH: "${{ github.workspace }}/_site"
-        
-      - uses: actions/upload-artifact@v3  # upload test results
-        if: success() || failure()       
-        with:
-          name: test-results
-          path: reports/jest-junit.xml
+        run: npm test
       
       - name: "Test reporter"
         uses: dorny/test-reporter@v1
         if: always()
         with:
-          artifact: test-results            # artifact name
           name: JEST Tests                  # Name of the check run which will be created
           path: '*.xml'                     # Path to test results (inside artifact .zip)
           reporter: jest-junit              # Format of test results
