--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -49,6 +49,8 @@ jobs:
           name: JEST Tests                  # Name of the check run which will be created
           path: '*.xml'                     # Path to test results (inside artifact .zip)
           reporter: jest-junit              # Format of test results
+          fail-on-error: false
+          fail-on-empty: false
 
       # - name: Caching do projeto
       #   uses: actions/cache@v2
