--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -1,13 +1,15 @@
 name: Correção
 
 on:
-  - push
-  - workflow_dispatch
+  pull_request:
+    types: [opened, synchronize]
+  
 
 permissions:
   checks: write
   actions: read
   contents: read
+  pull-requests: write
 
 env:
   JEKYLL_PATH: "${{ github.workspace }}/_site"
@@ -43,11 +45,20 @@ jobs:
       #     fail-on-empty: false
 
       - name: Report Summary
+        id: reportSummary
         uses: test-summary/action@v2
         with:
           paths: "reports/**/*.xml"
-          # output: "summary.md"
+          output: "reports/summary.md"
         if: always()
+
+      - name: Pull Request Comment
+        uses: thollander/actions-comment-pull-request@v1
+        with:
+          filePath: "reports/summary.md"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        if: always()
+
 
       # - name: Caching do projeto
       #   uses: actions/cache@v2
