--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -50,6 +50,7 @@ jobs:
         with:
           paths: "reports/**/*.xml"
           output: "reports/summary.md"
+          show: "all"
         if: always()
 
       - name: Pull Request Comment
